--- a/assets/css/custom-css/style.main.css
+++ b/assets/css/custom-css/style.main.css
@@ -1,169 +1,218 @@
-@media only screen and (max-width:767px) {
-  main {
-    background-image: url(../../../assets/images/bg.png);
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+.main {
+  background-image: url(../../../assets/images/bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-  .quiz-logo {
+.quiz-logo {
+  display: flex;
+  justify-content: end;
+}
+
+.w-30 {
+  width: 30%;
+}
+
+.quiz-container .count {
+  text-align: center;
+}
+
+.question {
+  background-color: #223031;
+  border-radius: 20px;
+  padding: 20px 0;
+  margin-bottom: 25px;
+}
+
+.question h2 {
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  margin: 0;
+}
+
+.option_value_inner {
+  position: relative;
+}
+
+.option_value {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.option_value label {
+  padding-top: 40px;
+}
+
+.option_value .checkbox-container {
+  display: flex;
+  position: absolute;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  left: 8px;
+}
+
+.checkbox-container span {
+  display: none;
+}
+
+.option_value label {
+  padding-block: 12px;
+  padding-inline: 40px;
+  margin-bottom: 10px;
+  background-color: #67828985;
+  border-radius: 10px;
+  display: block;
+}
+
+.option_value label:hover {
+  background-color: #223031;
+}
+
+.option_value span,
+.option_value label {
+  color: #fff;
+  font-size: 15px;
+}
+
+.quiz-jesus-img {
+  text-align: center;
+  position: relative;
+}
+
+.quiz-jesus-img img {
+  width: 28%;
+  position: relative;
+  z-index: 9;
+}
+.form-check-input.checkbox{
+  border-radius: 50%;
+}
+
+.form-check-input[type=checkbox]:checked,.form-check-input[type=checkbox]:checked:focus{
+  background-color: #fff;
+}
+.form-check-input:checked:focus,.form-check-input:checked{
+  border-color: #fff;
+}
+.quiz-jesus-img::before {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 100px;
+  height: 100px;
+  background: #F5E7DE;
+  margin: auto;
+  left: 0;
+  right: 0;
+  z-index: 9;
+  top: -10px;
+  border-radius: 50%;
+  /* background: radial-gradient(black, transparent); */
+  box-shadow: 0px 0px 40px 20px #F5E7DE;
+}
+
+.duk-website a {
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  font-size: 15px;
+}
+
+.quiz-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+}
+
+input[type="checkbox"]::before {
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+
+.play-quiz .form-check-input:checked[type=checkbox] {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Layer_1' x='0px' y='0px' viewBox='0 0 45.8 36.1' style='enable-background:new 0 0 45.8 36.1;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%23A7F55C;%7D%0A%3C/style%3E%3Cg%3E%3Cpath class='st0' d='M42.3,2.1c0.4-0.2,0.7,0.3,0.4,0.5c-9,7.9-16,17.3-21.5,27.9C19.9,33,18.1,35,15,35.4 c-2.7,0.4-4.8-0.4-5.7-3.2c-1.1-3.3-3.5-5.8-6-8c-1.4-1.3-3.4-2.4-2.3-4.8C2.2,17,4.3,15.9,7,16.1c3.1,0.2,4.9,2.2,6.4,4.6 c1.4,2.4,2.6,3,4.6,0.4C23.2,14.2,36.5,5.5,42.3,2.1z'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+.form-check-input:checked:after {
+  display: none !important;
+}
+
+.padding-0 {
+  padding: 0;
+}
+
+.main-play-area {
+  width: 100%;
+  max-width: 550px;
+  margin: auto;
+  padding: 0 1.5em;
+  height: 100vh;
+}
+
+.w-80 {
+  width: 80%;
+}
+
+form {
+  height: 100%;
+}
+
+/* @media only screen and (max-width:600px) { */
+  #play-quiz-main {
     display: flex;
-    justify-content: end;
-  }
-
-  .quiz-logo img {
-    width: 30%;
-  }
-
-  .quiz-container .count {
-    text-align: center;
-  }
-
-  .quiz-subheader {
-    text-align: center;
-    margin-block: 20px;
-  }
-
-  .quiz-subheader img {
-    width: 100%;
-  }
-
-  .question {
-    background-color: #223031;
-    border-radius: 20px;
-    padding-block: 25px;
-  }
-
-  .question h2 {
-    text-align: center;
-    font-size: 18px;
-    color: #fff;
-    margin: 0;
-  }
-  .option_value_inner{
-    position: relative;
-  }
-  .option_value {
-    padding-top: 20px;
-    position: relative;
-  }
-
-  .option_value label {
-    padding-top: 40px;
-  }
-
-  .option_value .checkbox-container {
-    display: flex;
-    position: absolute;
     height: 100%;
-    align-items: center;
-    justify-content: center;
-    left: 8px;
+    flex-direction: column;
+    justify-content: space-between;
   }
-
-  .checkbox-container span {
-    display: none;
+  .quiz-footer {
+    position: static;
   }
-
-  .option_value label {
-    padding-block: 7px;
-    padding-inline: 40px;
-    margin-bottom: 10px;
-    background-color: #67828985;
-    border-radius: 10px;
-    display: block;
+  .buttons_wrap{
+    display: flex;
+    justify-content: space-between;
   }
+/* } */
 
-  .option_value label:hover {
-    background-color: #223031;
-  }
-
-  .option_value span,
-  .option_value label {
-    color: #fff;
-    font-size: 15px;
-  }
-
-  .quiz-jesus-img {
-    text-align: center;
-    position: relative;
+@media only screen and (min-width:767px) {
+  .main-play-area {
+    max-width: 700px;
   }
 
   .quiz-jesus-img img {
-    width: 35%;
-    position: relative;
-    z-index: 9;
+    width: 25%;
+  }
+}
+
+@media only screen and (min-width:991px) {
+  .w-d15 {
+    width: 15%;
   }
 
-  .quiz-jesus-img::before {
-    position: absolute;
-    content: '';
-    display: block;
-    width: 150px;
-    height: 150px;
-    background: #F5E7DE;
-    margin: auto;
-    left: 0;
-    right: 0;
-    z-index: 9;
-    top: -10px;
-    border-radius: 50%;
-    /* background: radial-gradient(black, transparent); */
-    box-shadow: 0px 0px 40px 20px #F5E7DE;
+  .w-d60 {
+    width: 60%;
   }
 
-  .duk-website a {
-    color: #fff;
-    text-decoration: none;
-    text-align: center;
-    font-size: 15px;
+  .w-d50 {
+    width: 50%;
   }
 
-  .quiz-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  .w-d40 {
+    width: 40%;
   }
 
-  input[type="checkbox"]::before {
-    /* ...existing styles */
-
-    transform-origin: bottom left;
-    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  .w-d30 {
+    width: 30%;
   }
 
-
-  /* 
-
-  .question p{
-    color: #fff;
-    text-align: center;
-    font-size: 30px;
-    margin: 0;
-    line-height: 35px;
-  }
-  .quiz-answers-wrap form p{
-    margin-top: 5px;
-    padding: 10px;
-    font-size: 25px;
-    color: #fff;
-    background-color: #67828985;
-    border-radius: 25px;
-  } */
-
-
-  #test .form-check-input:checked[type=checkbox] {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Layer_1' x='0px' y='0px' viewBox='0 0 45.8 36.1' style='enable-background:new 0 0 45.8 36.1;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%23A7F55C;%7D%0A%3C/style%3E%3Cg%3E%3Cpath class='st0' d='M42.3,2.1c0.4-0.2,0.7,0.3,0.4,0.5c-9,7.9-16,17.3-21.5,27.9C19.9,33,18.1,35,15,35.4 c-2.7,0.4-4.8-0.4-5.7-3.2c-1.1-3.3-3.5-5.8-6-8c-1.4-1.3-3.4-2.4-2.3-4.8C2.2,17,4.3,15.9,7,16.1c3.1,0.2,4.9,2.2,6.4,4.6 c1.4,2.4,2.6,3,4.6,0.4C23.2,14.2,36.5,5.5,42.3,2.1z'/%3E%3C/g%3E%3C/svg%3E");
+  .main-play-area {
+    max-width: 900px;
   }
 
-  .form-check-input:checked:after{
-    display: none !important;
+  .quiz-jesus-img img {
+    width: 30%;
   }
-  /* #test .form-check-input:checked[type=checkbox] {
-      background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3 6-6'/%3E%3C/svg%3E);
-  } */
-
-
-
-
 }
