--- a/assets/css/dependency-css/style.webfonts.css
+++ b/assets/css/dependency-css/style.webfonts.css
@@ -1,7 +1,13 @@
-/* Lato */
+/* EBGaramond */
 @font-face {
-  font-family: "Lato";
-  src: url("../../fonts/Lato/Lato-Black.ttf") format("truetype");
-  font-weight: 900;
+  font-family: "EBGaramond";
+  src: url("../../fonts/EBGaramond/EBGaramond-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "EBGaramond";
+  src: url("../../fonts/EBGaramond/EBGaramond-Medium.ttf") format("truetype");
+  font-weight: 400;
   font-style: normal;
 }
